@@ -1,3 +1,15 @@
+2011-11-17  Vsevolod Vlasov  <vsevik@chromium.org>
+
+        Web Inspector: Remove onlineDetectionEnabled from Preferences
+        https://bugs.webkit.org/show_bug.cgi?id=72617
+
+        Reviewed by Pavel Feldman.
+
+        * inspector/front-end/ApplicationCacheItemsView.js:
+        (WebInspector.ApplicationCacheItemsView):
+        (WebInspector.ApplicationCacheItemsView.prototype.get statusBarItems):
+        * inspector/front-end/Settings.js:
+
 2011-11-17  Ken Buchanan  <kenrb@chromium.org>
 
         Crash from nested tables with generated content
